apps/website/app/scss/components/_breadcrumb.scss
@use "../abstracts/mixins" as *;
@use "../abstracts/variables" as *;
@use "../base/container";

.breadcrumbs {
  &__list {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin: 0;
    list-style: none;
  }

  &__item {
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }

  &__link {
    color: $charcoal;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0.25px;
    text-decoration: underline !important;
    transition: color 0.2s ease;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    &:hover {
      color: $charcoal;
      opacity: 0.8;
    }
  }

  &__text {
    color: $charcoal;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0.25px;
    max-width: 300px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &__separator {
    width: 16px;
    height: 16px;
    color: $charcoal;
  }

  &--white {
    .breadcrumbs__link,
    .breadcrumbs__text,
    .breadcrumbs__separator {
      color: $white_smoke;
    }
  }
}

